deploy/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-slay-api
spec:
  selector:
    app: pet-slay-api
  ports:
    - port: 80
      targetPort: 8080
