deploy/k8s/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-slay-api
spec:
  rules:
    - host: api-stage.pet-slay.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pet-slay-api
                port:
                  number: 80
